projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/sorted_rejects_non_iterable_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "sorted_rejects_non_iterable_argument"
# subject = "sorted"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""sorted: sorted_rejects_non_iterable_argument (errors)."""
try:
    result = sorted(1)
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
